--- a/microsoft.html
+++ b/microsoft.html
@@ -49,7 +49,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -69,7 +69,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Current Topics</a>
                             <ul class="dropdown-menu">
-                                <li><a href="microsoft.html">Microsoft Purchases Github</a></li>
+                                <li class="active"><a href="microsoft.html">Microsoft Purchases Github</a></li>
                                 <li><a href="utf8.html">UTF 8</a></li>
                                 <li><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>Microsoft Purchases Github</h1>
                     </div>
                 </div>
             </div>
@@ -101,15 +101,19 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Microsoft Purchases Github</h3>
+
+                                    <button class="btn btn-ghost" a src="<iframe width=" 560 " height="315 " src="https://www.youtube.com/embed/m164XggdRGA " frameborder="0 " allow="autoplay; encrypted-media " allowfullscreen></iframe>Microsoft purchases Github</button>
                                 </div>
                             </div>
-                            <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
+                            <div class="col-md-7 col-md-push-1 probootstrap-animate " id="probootstrap-content ">
+                                <h2>Microsoft Purchases Github</h2>
+                                <p>Over the summer of 2018, Microsoft purchased Github. It was a very big deal because Github has been an open source platform. people in the industry are pretty 50-50 on the acquisition of github by Microsoft. Some people
+                                    think that Microsoft needs to a return on their $7.5 billion investment. How you get that from an open source platform makes people uneasy. Especially when many of their rivals host some of their projects on github.
+                                    Also in the article it says Google tried to acquire github but failed in their attempt to do so. I can understand why people might think that Microsoft may begin to charge for services or restrict features. Microsoft
+                                    CEO claims that they are totally with open source and it seems they don't want to disrupt what github has created. Some developers claim it was an inevitable move by the tech giant and they say its a positive thing.
+                                    I am not sure how much influence we have on what Microsoft does with github but I don't think they would want to make the community upset with their moves. It is in their best interest to keep it the same if they want
+                                    to benefit from the purchase. </p>
 
                             </div>
                         </div>
@@ -118,42 +122,42 @@
             </div>
         </section>
 
-        <section class="probootstrap-cta">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Take this course now!!!</h2>
-                        <a href="https://www.fresnocitycollege.edu/admissions-aid/apply.html" target="_blank" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate" data-animate-effect="fadeInLeft">Enroll</a>
+        <section class="probootstrap-cta ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-12 ">
+                        <h2 class="probootstrap-animate " data-animate-effect="fadeInRight ">Take this course now!!!</h2>
+                        <a href="https://www.fresnocitycollege.edu/admissions-aid/apply.html " target="_blank " role="button " class="btn btn-primary btn-lg btn-ghost probootstrap-animate " data-animate-effect="fadeInLeft ">Enroll</a>
                     </div>
                 </div>
             </div>
         </section>
-        <footer class="probootstrap-footer probootstrap-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="probootstrap-footer-widget">
+        <footer class="probootstrap-footer probootstrap-bg ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-4 ">
+                        <div class="probootstrap-footer-widget ">
                             <h3>About The School</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
 
                         </div>
                     </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
+                    <div class="col-md-3 col-md-push-1 ">
+                        <div class="probootstrap-footer-widget ">
                             <h3>Links</h3>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="# ">Home</a></li>
+                                <li><a href="# ">Courses</a></li>
+                                <li><a href="# ">Teachers</a></li>
+                                <li><a href="# ">News</a></li>
+                                <li><a href="# ">Contact</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="probootstrap-footer-widget">
+                    <div class="col-md-4 ">
+                        <div class="probootstrap-footer-widget ">
                             <h3>Contact Info</h3>
-                            <ul class="probootstrap-contact-info">
+                            <ul class="probootstrap-contact-info ">
                                 <li><span>1101 East University Ave</span></li>
                                 <li><span>Fresno, CA 93741</span></li>
                                 <li><span>559 442 4600</span></li>
@@ -166,11 +170,11 @@
 
             </div>
 
-            <div class="probootstrap-copyright">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 text-left">
-                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> | Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
+            <div class="probootstrap-copyright ">
+                <div class="container ">
+                    <div class="row ">
+                        <div class="col-md-8 text-left ">
+                            <p>&copy; 2018 <a href="https://probootstrap.com/ ">Fresno City College</a> | Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
                         </div>
                         <div class="col-md-4 probootstrap-back-to-top ">
                             <p><a href="# " class="js-backtotop ">Back to top <i class="icon-arrow-long-up "></i></a></p>
@@ -184,9 +188,9 @@
     <!-- END wrapper -->
 
 
-    <script src="js/scripts.min.js"></script>
-    <script src="js/main.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/scripts.min.js "></script>
+    <script src="js/main.min.js "></script>
+    <script src="js/custom.js "></script>
 
 </body>
 
