--- a/editors.html
+++ b/editors.html
@@ -5,9 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
-    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <title>Editors</title>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -49,7 +47,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -62,7 +60,7 @@
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
                                 <li><a href="github.html">Github</a></li>
-                                <li><a href="editors.html">Editors</a></li>
+                                <li class="active"><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
                         </li>
@@ -86,7 +84,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>Editors</h1>
                     </div>
                 </div>
             </div>
@@ -101,16 +99,16 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Editors</h3>
+                                    <button class="btn btn-ghost" a src="https://code.visualstudio.com/"> Visual Studio Code </button>
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
-
+                                <h2>Editors</h2>
+                                <p>For this assignment we learned about code editors. Specifically Visual Studio Code. It is a code editor created by Microsoft and is very popular amongst developers.</p>
+                                <p>It is an editor that I have been using for awhile and it also free! It has many extensions, color themes and many other features that enhance the experience of using a code editor.</p>
+                                <p>There are other code editors like atom and sublime text but I don't really like them as much and sometimes feel slower. </p>
                             </div>
                         </div>
                     </div>
