--- a/onlineimage.html
+++ b/onlineimage.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
+    <title>Online Image Compression</title>
     <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -49,7 +49,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -63,7 +63,7 @@
                                 <li><a href="http.html">HTTP</a></li>
                                 <li><a href="github.html">Github</a></li>
                                 <li><a href="editors.html">Editors</a></li>
-                                <li><a href="onlineimage.html">Online Image Compression</a></li>
+                                <li class="active"><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
                         </li>
                         <li>
@@ -86,7 +86,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>Online Image Compression</h1>
+
                     </div>
                 </div>
             </div>
@@ -101,16 +102,17 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Online Image Compression</h3>
+                                    <button class="btn btn-ghost" a src="https://compressjpeg.com/">Image Compressor</button>
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
-
+                                <h2>Online Image Compression</h2>
+                                <p>On this assignment we learned how to use an online image compression. These are important because it makes images that normally are larger in size. This is important because sites need to be light and fast. Large images
+                                    bog down the speed of websites and become annoying for users. </p>
+                                <p>With a simple search you can find a site online where you drop your image and it spits out a compressed version of your image file. You are able to download and use it. Most of the time you can't even tell a difference
+                                    between the original and the compressed.</p>
                             </div>
                         </div>
                     </div>
