--- a/bootstraptemp.html
+++ b/bootstraptemp.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
+    <title>Bootstrap Templates</title>
     <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -49,7 +49,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -72,7 +72,7 @@
                                 <li><a href="microsoft.html">Microsoft Purchases Github</a></li>
                                 <li><a href="utf8.html">UTF 8</a></li>
                                 <li><a href="web2.html">Web 2.0</a></li>
-                                <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
+                                <li class="active"><a href="bootstraptemp.html">Bootstrap Templates</a></li>
                                 <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
                             </ul>
                         </li>
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>Bootstrap Themes</h1>
                     </div>
                 </div>
             </div>
@@ -101,15 +101,19 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Bootstrap Themes</h3>
+
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
+                                <h2>Bootstrap Themes</h2>
+                                <p>For this assignment we had to search for bootstrap themes for this project. In my experience I viewed about 30 to 40 different themes on 5 or more different sites. There are a lot of options out there and some really nice
+                                    templates to chose from. I chose this one because it seems to me thats clean and simple, has some cool effects and it has to do with education. I felt that it was the most adequate for the project based on what I saw
+                                    from the search. I saw a lot of agency, restaurant and e-commerce templates and those did not get my attention and felt that did not fit with what the assignment is. I reviewed the code and it does not look too bad,
+                                    I noticed that it has some extra css and js but I do not think it is going to be anything crazy. I felt that other templates, while they looked really cool and had crazy effects, are maybe a bit too much for a beginner
+                                    project.
+                                </p>
 
                             </div>
                         </div>
