--- a/frontendframeworks.html
+++ b/frontendframeworks.html
@@ -48,7 +48,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -72,7 +72,7 @@
                                 <li><a href="utf8.html">UTF 8</a></li>
                                 <li><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
-                                <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
+                                <li class="active"><a href="frontendframeworks.html">Front End Frameworks</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>Front End Frameworks</h1>
                     </div>
                 </div>
             </div>
@@ -100,16 +100,19 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Front End Frameworks</h3>
+                                    <button class="btn btn-ghost" a src="https://materializecss.com/">Materialize CSS</button>
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
-
+                                <h2>Front End Frameworks</h2>
+                                <p>We had to do some research on front end frameworks, the framework I chose is Materialize, it is based off Googles Material Design concepts. It uses their design specifications and Googles Idea is that the UI experience
+                                    be the same across all platforms. So with Materialize the have a framework with custom components, animations and transitions that will look similar to Googles other products. It has some cool javascript features like,
+                                    parallaxes, image zoom and pop-ups. You have to include the materialize.js for these features to work. Similar to the Bootstraps requirement of their javascript. If you look at their site they include some starter templates
+                                    that look very clean modern. It also supports Sass for the people that like to use it. What is also cool is their CSS options, they have an extensive color palette and their grid also seems easy to use. They have a
+                                    feature called pulse and it adds a very cool effect to their buttons. Their documentation is very good I think and very easy to follow for somebody that wants to delve into Materialize. If someone likes Googles design
+                                    style this is the framework to use.</p>
                             </div>
                         </div>
                     </div>
