--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
                                 <div class="text-center">
-                                    <h1 class="probootstrap-heading probootstrap-animate">Welcome To CIT-82</h1>
+                                    <h1 class="probootstrap-heading probootstrap-animate ">Welcome To CIT-82</h1>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                 <p>This is a summary of CIT-82, you will find topics that we have gone over during our course. This course is about Web Technologies and we learn on everything related to the web. From the beginning of the internet to AI.</p>
 
                             </div>
-                            <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/libraryfcc.jpg)">
+                            <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/library.jpg)">
 
                             </div>
                         </div>
