--- a/utf8.html
+++ b/utf8.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
+    <title>UTF-8</title>
     <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -49,7 +49,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -70,7 +70,7 @@
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Current Topics</a>
                             <ul class="dropdown-menu">
                                 <li><a href="microsoft.html">Microsoft Purchases Github</a></li>
-                                <li><a href="utf8.html">UTF 8</a></li>
+                                <li class="active"><a href="utf8.html">UTF 8</a></li>
                                 <li><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
                                 <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>UTF-8</h1>
                     </div>
                 </div>
             </div>
@@ -101,16 +101,20 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>UTF-8</h3>
+                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/IRdupNXpm8k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
-
+                                <h2>UTF-8</h2>
+                                <p>It is interesting how something so basic as communicating between two machines, is so revolutionary. I personally had never thought how this worked and took it for granted. In the video I found, a TedxVienna talk the speaker
+                                    Johannes Bergerhausen goes into detail about how all this began. He talks about how using ASCII in 1969 , four universities, UCLA, UCSB, Stanford and Utah drew up the sketch for the first internet. They were able to
+                                    communicate with each other using IBM computers that filled up the entire rooms and they used ASCII to do it. He goes on to talk about how UNICODE in 1991 backed by all the major companies in tech backed the use of
+                                    it and allowed for different languages to communicate their letter or characters in greek, arabic or Japanese. Unicode allows people to send emojis which have become as important as regular letters. The people at that
+                                    work at the Unicode consortium seem interested in preserving all letters and symbols from different cultures. They have also created a code for Sumerian cueneiform, which was the language that the Epic of Gilgamesh
+                                    was written in. This is important for people who study these ancient languages if they are uploaded to their computers they can search writing in cuneiform. It is very interesting how something so basic as two computers
+                                    communicating with each other evolved into two people sending each other emojis on their smart phones.</p>
                             </div>
                         </div>
                     </div>
