--- a/web2.html
+++ b/web2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
+    <title>Web 2.0</title>
     <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -49,7 +49,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -71,7 +71,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="microsoft.html">Microsoft Purchases Github</a></li>
                                 <li><a href="utf8.html">UTF 8</a></li>
-                                <li><a href="web2.html">Web 2.0</a></li>
+                                <li class="active"><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
                                 <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
                             </ul>
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>Web 2.0</h1>
                     </div>
                 </div>
             </div>
@@ -101,16 +101,18 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Web 2.0</h3>
+                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/6gmP4nk0EOE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
-
+                                <h2>Web 2.0</h2>
+                                <p>I have never seen this video but it is very interesting. It brought back a lot of memories seeing some of those sites like netscape and flickr. In a video so short compared to other videos online it contains so much information.
+                                    I think it shows us the history of the internet from its simple beginnings and brings us to the present and its current issues like ethics on the internet and its influence it has on our daily lives. Compared to the
+                                    past it has become a social phenomena with social networks, crowd sourcing, social curating, video content etc. All these are elements of the web 2.0. At the end of the video one of the words that was printed was ethics,
+                                    in my research I read that some of the critics of web 2.0 claim it is too easy for any person to affect the online content and ruin the credibility, ethics and legality of content on the web. People who defend the current
+                                    state claim that the opposite, wide spread censorship would be far worse. These are some of the issues that I have heard from other news source and it seems like we as a society are going to continue to struggle with
+                                    for years to come.</p>
                             </div>
                         </div>
                     </div>
